--- a/build.xml
+++ b/build.xml
@@ -3,6 +3,11 @@
     <target name="build">
     </target>
 
+    <!-- Runs ApiGen -->
+    <target name="apigen">
+        <exec command="apigen generate --todo --tree --source src --destination doc" passthru="true" checkreturn="true"/>
+    </target>
+
     <!-- Runs all unit tests -->
     <target name="unit">
         <exec command="bin/phpunit --bootstrap=test/bootstrap.php test" passthru="true" checkreturn="true"/>
