--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,6 @@
 
     <!-- Runs all unit tests -->
     <target name="unit">
-        <exec command="bin/phpunit --bootstrap=test/bootstrap.php test" passthru="true" checkreturn="true"/>
+        <exec command="bin/phpunit" passthru="true" checkreturn="true"/>
     </target>
 </project>
