Updated dependencies and use type hinting.

--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
     "Exception",
     "Format"
   ],
-  "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.1.0"
   },
   "require-dev": {
     "phing/phing": "^2.0.0",
-    "phpunit/phpunit": "^6.0.0"
+    "phpunit/phpunit": "^7.0.0 || ^8.0.0"
   },
   "autoload": {
     "psr-4": {
@@ -25,6 +24,6 @@
     }
   },
   "config": {
-    "bin-dir": "bin"
+    "bin-dir": "bin/"
   }
 }
