--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 version: ~> 1.0
 
+dist: trusty
+
 language: php
 php:
   - '7.1'
   - '7.2'
   - '7.3'
+  - '7.4'
   
 install:
   - composer self-update
