--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.1.0"
+    "php": ">=7.3.0"
   },
   "require-dev": {
-    "phing/phing": "^2.0.0",
-    "phpunit/phpunit": "^7.0.0 || ^8.0.0"
+    "phing/phing": "^2.0",
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
