--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=7.3.0"
+    "php": ">=7.3"
   },
   "require-dev": {
     "phing/phing": "^2.0",
@@ -24,6 +24,7 @@
     }
   },
   "config": {
-    "bin-dir": "bin/"
+    "bin-dir": "bin/",
+    "sort-packages": true
   }
 }
