--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
   "require": {
     "php": ">=7.4"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require-dev": {
-    "phing/phing": "^2.16.3",
+    "phing/phing": "^3.0.0-RC4",
     "phpunit/phpunit": "^9.5.0"
   },
   "autoload": {
@@ -25,6 +27,9 @@
   },
   "config": {
     "bin-dir": "bin/",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "phing/phing-composer-configurator": true
+    }
   }
 }
