--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,11 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=8.2"
+    "php": ">=8.3"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "require-dev": {
-    "phing/phing": "^3.0.0-RC6",
-    "phpunit/phpunit": "^10.5.10"
+    "phing/phing": "^3.0.1",
+    "phpunit/phpunit": "^11.0"
   },
   "autoload": {
     "psr-4": {
